--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>com.kctechnologies</groupId>
   <artifactId>maven-web-project</artifactId>
   <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.1-SNAPSHOT</version>
   <name>Maven Web Project</name>
   <description>Maven Web Project for Java</description>
 	
@@ -81,12 +81,12 @@
         <repository>
           <id>nexus</id>
           <name>KC Tech Releases Nexus Repository</name>
-          <url>http://http://3.109.4.225:8081/repository/kcmaven-release//</url>
+          <url>http://13.233.208.100:8081/repository/kcmaven-release/</url>
         </repository>
         <snapshotRepository>
           <id>nexus</id>
           <name>KC Tech Snapshot Nexus Repository </name>
-           <url>http:http://3.109.4.225:8081/repository/kcmaven-snapshot/</url>
+           <url>http://13.233.208.100:8081/repository/kcmaven-snapshot/</url>
         </snapshotRepository>
    </distributionManagement>
 	
